# actx_ecommerce

./: .env  Cargo.toml  rust_ecommerce.db  rust_ecommerce2.db
migrations/: 20250918170419_inital_tables.sql
src/: main.rs
src/errors/: mod.rs
src/handlers/: cart.rs  categories.rs  mod.rs  orders.rs  products.rs
src/models/: mod.rs
templates/: admin.html  cart.html  index.html  store.html
