[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[package]
name = "actx_shop"
version = "0.1.0"
edition = "2024"
default-run = "actx_shop"

[dependencies]
actix-web = "4.5"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-files = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
bcrypt = "0.15"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"